# rca_robot_tour

./: .gitignore  README.md  compileFile.py  config.json  icon.icns  pyproject.toml  rca.py  root.conf  root2.conf  screenshot.eps  settings.py  test_course_screenshots.json
.github/workflows/: build.yml  test.yml
docs/: BUILDING_SRC.md  COMPILE_COMMANDS.md
docs/examples/: compileCommands_example_1.py  compileCommands_example_default.py
