[project]
name = "rca"
version = "1.0.6"
description = "Robot Coaching Assistant for Science Olympiad"

[tool.cxfreeze]
executables = [
    {script = "rca.py", base = "gui", icon="icon", target_name='Robot Coaching Assistant', shortcut_name="Robot Coaching Assistant", shortcut_dir="ProgramMenuFolder"}
]

[tool.cxfreeze.build_exe]
include_files=['config.json','compileFile.py','pyproject.toml','icon.png']

[tool.cxfreeze.bdist_mac]
bundle_name="Robot Coaching Assistant"

[tool.cxfreeze.bdist_dmg]
volume_label="Robot Coaching Assistant Installer"
applications_shortcut=true

[tool.cxfreeze.bdist_msi]
upgrade_code='{5BD4C30E-5971-3BAA-8787-05D1BAD59FE8}' #import uuid; str(uuid.uuid3(uuid.NAMESPACE_DNS, 'rca.anonymousaga.git')).upper()
install_icon='icon.ico'
target_name="Robot Coaching Assistant"
